# aria2p-parquet-dl

./: README.md  pyproject.toml
tests/: test_pokemon.py
